RESOLVED FIXED314821
[JSC] Fix a few more missing includes
https://bugs.webkit.org/show_bug.cgi?id=314821
Summary [JSC] Fix a few more missing includes
Claudio Saavedra
Reported 2026-05-14 08:08:51 PDT
.
Attachments
Claudio Saavedra
Comment 1 2026-05-14 08:09:24 PDT
EWS
Comment 2 2026-05-14 08:20:39 PDT
Committed 313245@main (85bcefbc014c): <https://commits.webkit.org/313245@main> Reviewed commits have been landed. Closing PR #64935 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-14 08:21:12 PDT
Note You need to log in before you can comment on or make changes to this bug.