[JSC] Fix a few more missing includes https://bugs.webkit.org/show_bug.cgi?id=314821

Unreviewed.

* Source/JavaScriptCore/heap/ConservativeRoots.cpp:
* Source/WebCore/bindings/js/JSDOMConvertVariadic.h:

Canonical link: https://commits.webkit.org/313245@main